--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
            id="org.ogury.cordova.plugin"
-      version="0.1.0">
+      version="0.1.2">
   <name>OguryPhonegapPlugin</name>
   <description>phonegap ogury plugin</description>
   <author>Fergal Condron, fergal@clubscores.ie</author>
@@ -10,7 +10,7 @@
   <!-- android -->
   <platform name="android">
       <js-module src="www/CPresage.js" name="CPresage">
-        <clobbers target="window.CPresage" />
+	<clobbers target="CPresage" />
       </js-module>
     <preference name="API_KEY" />
     
@@ -53,7 +53,7 @@
     </config-file>
 
     <source-file src="src/android/res/values/styles.xml" target-dir="res/values" />
-	  <source-file src="src/android/ogury/presage-lib-1.6.0.jar" target-dir="libs" />
+	  <source-file src="src/android/ogury/presage-lib-1.6.1.jar" target-dir="libs" />
     <source-file src="src/android/ogury/CPresage.java" target-dir="src/io/presage" />      
   </platform>
 </plugin>
